fixed spacing on landscape view

--- a/css/style.css
+++ b/css/style.css
@@ -434,7 +434,8 @@ padding:0;
 
 @media only screen and (orientation:landscape) and (max-width:900px){
 #showgo-top img {
-margin-top:5px;
+margin-top:0px;
+margin-bottom: 5px;
 }
 
 .masthead {
@@ -487,7 +488,7 @@ padding:8px 17px 7px 15px;
 width:155px;
 text-align: center;
 height: 40px;
-margin-top: 1em;
+margin-top: 2em;
 }
 
 #footer-text {
